--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,20 +1,12 @@
 site_name: Lexicons
-repo_name: 'my-github-handle/my-project'
-repo_url: 'https://github.com/my-github-handle/my-project'
-#theme: readthedocs
-#theme: spacelab
+repo_name: 'lexicons-website'
+repo_url: 'https://github.com/technopreneurg/lexicons-website'
 
 theme: 'material'
 extra:
   palette:
     primary: 'deep purple'
     accent: 'purple'
-
-# Extensions
-#markdown_extensions:
-#  - admonition
-#  - codehilite(guess_lang=false)
-#  - toc(permalink=true)
 
 pages:
 - Home: index.md
