added cloud computing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,3 +16,4 @@ pages:
 - Lexicons-*:
     - Artificial Neural Networks: lexicon-artificial-neural-networks.md
     - Computational Linguistics: lexicon-computational-linguistics.md
+    - Cloud Computing: lexicon-cloud-computing.md
