--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,8 +2,8 @@ site_name: Lexicons
 repo_name: 'lexicons-website'
 repo_url: 'https://github.com/technopreneurg/lexicons-website'
 
-theme: 'material'
-extra:
+theme:
+  name: material
   palette:
     primary: 'deep purple'
     accent: 'purple'
@@ -11,9 +11,12 @@ extra:
 dev_addr: '0.0.0.0:8000'
 google_analytics: ['UA-102723231-2', 'auto']
 
+markdown_extensions:
+  - meta
+
 pages:
 - Home: index.md
 - Lexicons-*:
-    - Artificial Neural Networks: lexicon-artificial-neural-networks.md
-    - Computational Linguistics: lexicon-computational-linguistics.md
-    - Cloud Computing: lexicon-cloud-computing.md
+    - lexicon-artificial-neural-networks.md
+    - lexicon-computational-linguistics.md
+    - lexicon-cloud-computing.md
