--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,3 +21,4 @@ pages:
     - lexicon-aws.md
     - lexicon-cloud-computing.md
     - lexicon-computational-linguistics.md
+    - lexicon-information-security.md
